--- a/FestiMania_front/src/app/modules/auth/register/register.component.css
+++ b/FestiMania_front/src/app/modules/auth/register/register.component.css
@@ -6,7 +6,7 @@
 }
 
 .bg-register-image {
-  background-image: url("../../../../assets/images/login.jpg");
+  background-image: url("../../../../assets/images/register.jpg");
   padding-right: 10px;
   background-position: center;
   background-size: cover;
