--- a/FestiMania_front/src/app/modules/auth/register/register.component.html
+++ b/FestiMania_front/src/app/modules/auth/register/register.component.html
@@ -35,10 +35,10 @@
 
                   <div class="">
                     <span class="p-float-label">
-                      <input pInputText formControlName="documentoId" id="documentoId" class="form-control-user" />
-                      <label htmlFor="documentoId">DNI | NIE</label>
+                      <input pInputText formControlName="username" id="username" class="form-control-user" />
+                      <label htmlFor="username">Nombre de usuario</label>
                     </span>
-                    <small *ngIf="noEsValido('documentoId')">{{ getMensaje('documentoId') }}</small>
+                    <small *ngIf="noEsValido('username')">{{ getMensaje('username') }}</small>
                   </div>
 
                   <div class="padding-top">
@@ -71,7 +71,7 @@
                       <small *ngIf="noEsValido('confirmPassword')">{{ getMensaje('confirmPassword') }}</small>
                     </div>
 
-                    <div *ngIf="formGroupRegister.hasError('passwordMismatch') && formGroupRegister.get('confirmPassword')?.dirty" class="text-center">
+                    <div *ngIf="formGroupRegister.hasError('passwordMismatch') && formGroupRegister.get('confirmPassword')?.touched" class="text-center">
                       <small>Las contraseñas no coinciden.</small>
                     </div>
 
